update action steps to run pull before push in the workflow

--- a/.github/workflows/medium.yml
+++ b/.github/workflows/medium.yml
@@ -2,7 +2,7 @@ name: Update README with Medium Blogs
 
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 0 * * *'  # midnight
   workflow_dispatch:
 
 jobs:
@@ -11,10 +11,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # important for git pull to work
 
-      - name: Use Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
@@ -24,10 +26,16 @@ jobs:
           npm install rss-parser
           node .github/scripts/updateMedium.js
 
-      - name: Commit changes
+      - name: Configure Git
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
+
+      - name: Pull latest changes to avoid push conflicts
+        run: git pull origin main --rebase || true
+
+      - name: Commit and push changes
+        run: |
           git add README.md
-          git commit -m '✨ update latest Medium blogs' || echo "No changes to commit"
-          git push
+          git diff --cached --quiet || git commit -m '✨ update latest Medium blogs'
+          git push origin main
